# Stage

./: .gitignore  CMakeLists.txt  README.md  package.xml
libstage/: CMakeLists.txt
libstage/src/: model.cc
