<?xml version="1.0"?>
<package>
  <name>stage</name>
  <version>4.3.0</version>
  <description>
    Stage simulates a population of mobile robots, sensors and objects in
    a two-dimensional bitmapped environment. Stage is designed to support
    research into multi-agent autonomous systems, so it provides fairly
    simple, computationally cheap models of lots of devices rather than
    attempting to emulate any device with great fidelity
  </description>

  <maintainer email="valerio.magnago@gmail.com">Valerio Magnago</maintainer>

  <license>GPL</license>

  <url type="website">http://rtv.github.com/Stage</url>
  <url type="repository">https://github.com/Mailamaca/Stage/</url>
  <url type="bugtracker">https://github.com/Mailamaca/Stage/issues</url>

  <author email="vaughan@sfu.ca">Richard Vaughan</author>
  <author email="gerkey@willowgarage.com">Brian Gerkey</author>
  <author email="hedges@mobilerobots.com">Reed Hedges</author>
  <author email="andrew.b.howard@jpl.nasa.gov">Andrew Howard</author>
  <author email="tcollett@plan9.net.nz">Toby Collett</author>
  <author email="pooyak@sfu.ca">Pooya Karimian</author>
  <author email="jra11@sfu.ca">Jeremy Asher</author>
  <author email="asc17@sfu.ca">Alex Couture-Beil</author>
  <author email="git@killbots.net">Geoff Biggs</author>
  <author email="jpgr87@github.com">Rich Mattes</author>
  <author email="abbas.sadat@gmail.com">Abbas Sadat</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <build_depend>gtk2</build_depend>
  <build_depend>libfltk-dev</build_depend>
  <build_depend>libjpeg</build_depend>
  <build_depend>libtool</build_depend>
  <build_depend>opengl</build_depend>

  <run_depend>libfltk-dev</run_depend>
  <run_depend>gtk2</run_depend>
  <run_depend>libjpeg</run_depend>
  <run_depend>opengl</run_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
